# EpidemicManagementSystem

./: CMakeLists.txt  Data.c  Data.h  LinkList.c  LinkList.h  README.md  ResidentInfo.c  ResidentInfo.h  ResidentInfoList.c  ResidentInfoList.h  Utils.c  Utils.h  VisitorInfo.c  VisitorInfo.h  VisitorInfoList.c  VisitorInfoList.h  main.c
Data/: residentData.txt  visitorData.txt
src/: SystemBody.h  main.c
src/headerSrc/: ResidentInfo.c  ResidentInfoList.c  Utils.c  VisitorInfo.c  VisitorInfoList.c
src/headers/: ResidentInfo.h  ResidentInfoList.h  Utils.h  VisitorInfo.h  VisitorInfoList.h
